<?xml version="1.0" encoding="utf-8"?>

<!--android.support.constraint.ConstraintLayout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.stu.maasrot.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_account_status"
        android:textSize="40dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="90dp"/>

    <ImageView
        android:id="@+id/mainImage"
        android:layout_marginTop="5dp"
        android:layout_width="30dp"
        android:layout_height="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newAction"
        android:text="@string/new_action"
        style="@style/Widget.AppCompat.Button.Colored"
        />
        <!--style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/history"
        android:text="@string/history"/>

</LinearLayout>
